v0.2.0
  api change: camel case everything (nextSibling, prevSibling, defineNamespace)
  feature: can add a node object as the child of a node
  feature: add #toString() to nodes
  feature: add #remove() to nodes
  housekeeping: update spectacular

v0.1.0
  birth